# MatlabCoderExample

./: CMakeLists.txt  README.md  main.cpp  main.h
inc/: FunctionSum.h  FunctionSum_initialize.h  FunctionSum_terminate.h  FunctionSum_types.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h
src/: FunctionSum.cpp  FunctionSum_initialize.cpp  FunctionSum_terminate.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
